2013-05-31  Roger Fong  <roger_fong@apple.com>

        Unreviewed. Modify AssembleBuildLogs project to WebKit solution in preparation for moving buildbots to VCExpress 2010.

        * win/AssembleBuildLogs/AssembleLogs.cmd:

2013-05-31  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r151022.
        http://trac.webkit.org/changeset/151022
        https://bugs.webkit.org/show_bug.cgi?id=117084

        Also breaks build by introducing duplicate symbols (Requested
        by bfulgham on #webkit).

        * TestWebKitAPI/Configurations/TestWebKitAPICommon.vsprops:

2013-05-31  Brent Fulgham  <bfulgham@apple.com>

        [Windows] Unreviewed build fix to NRWT

        * Scripts/webkitpy/port/win.py:
        (WinPort.create_debugger_command_file): Use proper argument for _filesystem.write_text_file.

2013-05-31  Brent Fulgham  <bfulgham@apple.com>

        [Windows] Unreviewed build fix after r151012

        * TestWebKitAPI/Configurations/TestWebKitAPICommon.vsprops: Add dependency on
        WTF library to support SHA tests

2013-05-31  Brent Fulgham  <bfulgham@apple.com>

        [Windows] Unreviewed build fix after r151012

        * TestWebKitAPI/Tests/WTF/MD5.cpp: Include <wtf/StringExtras.h> to provide
        snprintf definition for Windows.

2013-05-31  Zan Dobersek  <zdobersek@igalia.com>

        Move MD5, SHA1 unit tests from WTF to TestWebKitAPI
        https://bugs.webkit.org/show_bug.cgi?id=116445

        Reviewed by Benjamin Poulain.

        Add the MD5 and SHA1 unit tests that were previously located inside WTF.

        * TestWebKitAPI/CMakeLists.txt:
        * TestWebKitAPI/GNUmakefile.am:
        * TestWebKitAPI/TestWebKitAPI.vcxproj/TestWebKitAPI.vcxproj:
        * TestWebKitAPI/TestWebKitAPI.vcxproj/TestWebKitAPI.vcxproj.filters:
        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WTF/MD5.cpp: Added.
        (TestWebKitAPI):
        (TestWebKitAPI::expectMD5):